<resources>
    <string name="app_name">Formula 1</string>
    <string name="splash_scr_content_desc">Racing cars</string>
    <string name="splash_text">Loading…</string>
    <string name="please_connect_to_the_internet">Please connect to the internet!</string>
    <string name="navigation_header_icon_desc">Navigation header icon</string>
    <string name="formula_1">Formula 1</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="drivers">Drivers</string>
    <string name="constructors">Constructors</string>
    <string name="circuits">Circuits</string>
    <string name="seasons">Seasons</string>
    <string name="about">About</string>
    <string name="general">General</string>
    <string name="application_information">Application information</string>
    <string name="exit">Exit application</string>
    <string name="really">Do you really want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="helmet_desc">Helmet</string>
    <string name="driver_search_placeholder">Search driver</string>
    <string name="web_view_icon">WebView icon</string>
    <string name="share">Share</string>
    <string name="share_url_with_friends">Share URL with friends</string>
    <string name="copied_url">Copied URL</string>
    <string name="text_plain">text/plain</string>
    <string name="circuit_search_placeholder">Search circuit</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="nationality">Nationality</string>
    <string name="country">Country</string>
    <string name="circuit_desc">Circuit icon</string>
    <string name="formula1_db">formula1.db</string>
    <string name="circuits_tab_title">Circuits</string>
    <string name="maps_tab_title">Map</string>
    <string name="constructor_search_placeholder">Search constructors</string>
    <string name="constructor_desc">Constructor image placeholder</string>
    <string name="seasons_search_placeholder">Search seasons</string>
    <string name="about_page_racing_car_picture">About page racing car picture</string>
    <string name="created_by">Created by</string>
    <string name="kevin_furjan">Kevin Furjan</string>
    <string name="application_version">Application version</string>
    <string name="toggle_dark_mode">Toggle dark mode</string>
    <string name="toggle_state">TOGGLE_STATE</string>
</resources>